--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "@faker-js/faker": "^7.6.0",
     "@sendgrid/mail": "^7.4.7",
     "bcrypt": "^5.0.1",
-    "cloudinary": "^1.27.0",
+    "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-busboy": "^8.0.0",
     "jest": "^27.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.12",
     "stripe": "^12.4.0",
     "supertest": "^6.1.6"
