--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.0.5",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.12",
+    "socket.io": "^4.6.1",
     "stripe": "^12.4.0",
     "supertest": "^6.1.6"
   },
