--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "license": "MIT",
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@sendgrid/mail": "^7.4.7",
+    "@sendgrid/mail": "^8.1.6",
     "bcrypt": "^5.0.1",
-    "cloudinary": "^1.37.0",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jest": "^27.2.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^6.0.5",
-    "multer": "^1.4.5-lts.1",
+    "multer": "2.0.2",
     "nodemon": "^2.0.12",
     "socket.io": "^4.6.1",
     "stripe": "^12.4.0",
